workloads/ha-eyg/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: homeassistant-eyg.tail4c7c90.ts.net
  name: ha-eyg
spec:
  externalName: placeholder
  type: ExternalName
