workloads/ha-eyg/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ha-eyg
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`eyguians.bapttf.com`)
      kind: Rule
      middlewares:
        - name: strip-proxy-headers
      services:
        - name: ha-eyg
          port: 8123
  tls: {}
